# poc-coffee-quality-management

./: .env.example  .env.shared  Cargo.toml  README.md  SHARED-INFRASTRUCTURE.md  docker-compose.dev.yml  docker-compose.shared.yml
ai-defect-detection/: README.md
ai-defect-detection/cloudformation/: ai-defect-detection.yaml  sagemaker-endpoint.yaml
ai-defect-detection/lambda/: Dockerfile  annotate_image.py  lambda_handler.py  requirements.txt
ai-defect-detection/model/: inference.py
ai-defect-detection/tests/: test_lambda_handler.py
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20241223000001_initial_schema.down.sql  20241223000001_initial_schema.sql  20241223000002_plots_and_harvests.sql  20241223000003_processing.sql  20241223000004_grading.sql  20241223000005_cupping.sql  20241223000006_inventory.sql  20241223000007_roasting.sql  20241224000001_weather.sql  20241224000002_certifications.sql  20241224000003_notifications.sql  20241224000004_offline_sync.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/handlers/: auth.rs  certification.rs  cupping.rs  grading.rs  harvest.rs  health.rs  inventory.rs  line_chatbot.rs  line_oauth.rs  lot.rs  mod.rs  notification.rs  plot.rs  processing.rs  reporting.rs  roasting.rs  role.rs  sync.rs  traceability.rs  weather.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/services/: auth.rs  certification.rs  cupping.rs  grading.rs  harvest.rs  inventory.rs  line_chatbot.rs  line_oauth.rs  lot.rs  mod.rs  notification.rs  plot.rs  processing.rs  reporting.rs  roasting.rs  role.rs  sync.rs  traceability.rs  weather.rs
backend/tests/: auth_tests.rs  certification_tests.rs  cupping_tests.rs  grading_tests.rs  harvest_lot_tests.proptest-regressions  harvest_lot_tests.rs  inventory_tests.rs  notification_tests.rs  processing_tests.rs  roasting_tests.rs  traceability_tests.rs  weather_tests.rs
config/: development.toml  production.toml  shared.toml
docs/: AI-FINETUNING-PLAN.md  COST-OPTIMIZATION.md  TAGGING-POLICY.md  WELL-ARCHITECTED-REVIEW.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: Dashboard.tsx  DefectDetection.tsx  Inventory.tsx  Login.tsx  Lots.tsx  Plots.tsx  Quality.tsx  index.ts
frontend/src/services/: api.ts  auth.ts
infrastructure/cdk/: README.md  package-lock.json  package.json
infrastructure/cdk/cdk.out/: CoffeeQM-AI.assets.json  CoffeeQM-AI.template.json  manifest.json  tree.json
infrastructure/cdk/lib/: coffee-ai-stack.ts  coffee-qm-stack.ts
infrastructure/cloudformation/: test-environment-optimized.yaml  test-environment.yaml
infrastructure/scripts/: build-and-push.sh  deploy-ai-model.sh  deploy-app.sh  deploy-cdk.sh  deploy-frontend.sh  deploy-infrastructure.sh  deploy-simple.sh  deploy-yolo-model.sh  run-e2e-tests.sh  run-migrations.sh  setup-cost-tracking.sh
infrastructure/terraform/: README.md
infrastructure/terraform/bootstrap/: main.tf
scripts/: deploy-shared.sh
shared/: Cargo.toml
shared/src/: lib.rs  types.rs  validation.rs
shared/src/models/: business.rs  cupping.rs  (+11 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+7 files in other folders)
