[workspace]
resolver = "2"
members = [
    "backend",
    "shared",
    "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Coffee Quality Management Team"]
license = "MIT"
repository = "https://github.com/your-org/coffee-quality-management"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Types
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Testing
proptest = "1.4"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Shared crate
shared = { path = "shared" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
