[package]
name = "coffee-quality-management-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
